--- a/Ardiem2.css
+++ b/Ardiem2.css
@@ -2,5 +2,5 @@
   font-family: 'Ardiem2';
   font-style: normal;
   font-weight: 400;
-  src: local('Ardiem2'), url(Ardiem2_.woff) format('woff');
+  src: local('Ardiem2'), url(Ardiem2.woff) format('woff');
 }
